# egui-keyframe

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: lib.rs  spaces.rs  traits.rs
src/core/: easing.rs  interpolation.rs  keyframe.rs  mod.rs  time.rs  track.rs
src/dopesheet/: mod.rs  property_tree.rs  selection.rs  track_area.rs
src/widgets/: bounding_box.rs  curve_editor.rs  keyframe_dot.rs  mod.rs  time_ruler.rs
