[package]
name = "egui-keyframe"
version = "0.1.0"
edition = "2024"
description = "Keyframe animation and curve editing widgets for egui"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virtualritz/egui-keyframe"
keywords = ["egui", "animation", "keyframe", "bezier", "timeline"]
categories = ["gui", "graphics", "game-development"]

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde", "indexmap/serde", "frame-tick?/serde"]
facet = ["dep:facet", "frame-tick?/facet"]
frame-tick = ["dep:frame-tick"]

[dependencies]
egui = "0.33"
uuid = { version = "1", features = ["v4"] }
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"], optional = true }
facet = { version = ">=0.40", optional = true }
frame-tick = { version = "0.1", optional = true }
ahash = "0.8"

[dev-dependencies]
eframe = "0.33"
